test/fail/block-late-return.grace
method name {
  { return }
}

name.apply
